codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_goal_continuation_drops_stale_reviews.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(rendered)
---
• Reviewing approval request (0s • esc to interrupt)
  └ rm -rf '/tmp/current-review'

╭──────────────────────────────────────────────────────────────────────╮
│ › Ask Codex to do anything                                           │
╰──────────────────────────────────────────────────────────────────────╯
  gpt-5.6-sol default · /tmp/project
