codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_draft_footer_narrow.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
expression: "render_bottom_popup(&chat, 36)"
---
╭──────────────────────────────────╮
│ › make a plan                    │
╰──────────────────────────────────╯
  gpt-5 default · /tmp/project
